# cook.hs

./: .gitignore  Deploy.hs  FileMap.hs  LICENSE  Main.hs  Plan.hs  README  README.md  TODO  Template.hs  TestPlan.hs  Trace.hs  cabal.config  cook.cabal  deploy.hs  execcwd.sh  p.mustache  p.yaml  q.mustache  stack.yaml
conf/cjdns/: GetPeers.hs  cjdnsadmin  cjdroute.conf  generate-conf.sh  node.yaml  peers.json
ingredient/systemd/: ipfs.service
ingredients/cjdns/: cjdroute.conf.mustache  generate-conf.sh
recipes/: Tinc.hs
script/: bootstrap-arch.sh  bootstrap-rpi-arch.sh
src/Cook/: Facts.hs  FsTree.hs  Pacman.hs  Provider.hs  Recipe.hs  Systemd.hs  Template.hs
src/Cook/Catalog/: Cjdns.hs  Git.hs  Go.hs  IPFS.hs  Ipfs.hs  Pacman.hs  Rkt.hs  SSH.hs  Ssh.hs  Sudo.hs  Systemd.hs  Tinc.hs  User.hs
src/Cook/Catalog/Arch/: Pacman.hs  Rootfs.hs
src/Cook/Catalog/Debian/: Apt.hs
src/Cook/Catalog/Systemd/: Container.hs
src/Cook/Provider/: PkgManager.hs
src/Cook/Recipe/: Bootstrap.hs  Config.hs  FsTree.hs  PkgManager.hs  Template.hs  Util.hs
src/Cook/Recipe/Provider/: PkgManager.hs
templates/cjdns/: cjdroute.conf-  cjdroute.conf.mustache  cjdroute.conf.yaml  generate-conf.sh
test/: Playground.hs  TestRecipe.hs
tools/: Cjdns.hs  Contain.hs  Cook.hs  CookContainer.hs
tools/conf/systemd/: machine.nspawn
