name:                cook
version:             0.1.0.0
synopsis:            Simple/effective configuration management + deployment done in Haskell
description:         F*ck shell script!
homepage:            https://github.com/jimenezrick/cook.hs
license-file:        LICENSE
license:             MIT
author:              Ricardo Catalinas Jiménez <r@untroubled.be>
copyright:           Copyright (c) 2016 Ricardo Catalinas Jiménez
category:            Utility
build-type:          Simple
extra-source-files:  README
cabal-version:       >=1.20

library
  ghc-options:         -Wall
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , OverloadedLists
                     , TemplateHaskell
                     , RecordWildCards
                     , DeriveDataTypeable
                     , DeriveGeneric
                     , ScopedTypeVariables
                     , GADTs
  hs-source-dirs:      src
  exposed-modules:     Cook.Recipe
                     , Cook.Recipe.Config
                     , Cook.Recipe.FsTree
                     , Cook.Recipe.Template
                     , Cook.Catalog.Cjdns
                     , Cook.Catalog.Git
                     , Cook.Catalog.IPFS
                     , Cook.Catalog.SSH
                     , Cook.Catalog.Sudo
                     , Cook.Catalog.Arch.Pacman
                     , Cook.Catalog.Systemd
                     , Cook.Catalog.Systemd.Container
                     , Cook.Catalog.User
  build-depends:       base >=4.8 && <5
                     , bytestring
                     , data-default
                     , semigroups
                     , filepath
                     , text
                     , transformers
                     , mtl
                     , mmorph
                     , lens
                     , unix
                     , network
                     , directory
                     , process
                     , process-extras
                     , uuid
                     , yaml
                     , aeson
                     , mustache
                     , file-embed

executable cook
  ghc-options:         -Wall
  default-language:    Haskell2010
  main-is:             Main.hs
  build-depends:       base >=4.8 && <5
                     , cook

executable test-recipe
  ghc-options:         -Wall
  default-language:    Haskell2010
  main-is:             test/TestRecipe.hs
  build-depends:       base >=4.8 && <5
                     , transformers
                     , text
                     , cook
