name:                cook
version:             0.1.0.0
synopsis:            Simple/effective configuration management + deployment done in Haskell
description:         Forget shell script!
homepage:            https://github.com/jimenezrick/cook.hs
license-file:        LICENSE
license:             MIT
author:              Ricardo Catalinas Jiménez <r@untroubled.be>
copyright:           Copyright (c) 2016 Ricardo Catalinas Jiménez
category:            Utility
build-type:          Simple
extra-source-files:  README
cabal-version:       >=1.20

library
  ghc-options:         -Wall
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , OverloadedLists
                     , TemplateHaskell
                     , RecordWildCards
                     , DeriveDataTypeable
                     , DeriveGeneric
                     , ScopedTypeVariables
                     , RankNTypes
                     , GADTs
  hs-source-dirs:      src
  exposed-modules:     Cook.Recipe
                     , Cook.Recipe.Config
                     , Cook.Recipe.FsTree
                     , Cook.Recipe.Template
                     , Cook.Recipe.Util
                     , Cook.Catalog.Cjdns
                     , Cook.Catalog.Git
                     , Cook.Catalog.Go
                     , Cook.Catalog.IPFS
                     , Cook.Catalog.SSH
                     , Cook.Catalog.Sudo
                     , Cook.Catalog.Arch.Pacman
                     , Cook.Catalog.Arch.Rootfs
                     , Cook.Catalog.Debian.Apt
                     , Cook.Catalog.Systemd
                     , Cook.Catalog.Systemd.Container
                     , Cook.Catalog.User
  build-depends:       base >=4.8 && <5
                     , bytestring
                     , containers
                     , unordered-containers
                     , data-default
                     , lifted-base
                     , filepath
                     , filemanip
                     , text
                     , transformers
                     , mtl
                     , mmorph
                     , unix
                     , network
                     , http-conduit
                     , directory
                     , typed-process
                     , uuid
                     , yaml
                     , aeson
                     , aeson-pretty
                     , mustache
                     , file-embed
                     , lens
                     , lens-aeson

executable cook-contain
  ghc-options:         -Wall
  default-language:    Haskell2010
  main-is:             tools/Contain.hs
  build-depends:       base >=4.8 && <5
                     , cook

executable cook-cjdns
  ghc-options:         -Wall
  default-language:    Haskell2010
  main-is:             tools/Cjdns.hs
  build-depends:       base >=4.8 && <5
                     , cook

executable cook-playground
  ghc-options:         -Wall
  default-language:    Haskell2010
  main-is:             test/Playground.hs
  build-depends:       base >=4.8 && <5
                     , transformers
                     , text
                     , cook
