name:                cook
version:             0.1.2.0
synopsis:            Effective configuration management done in Haskell
description:         Forget shell script!
homepage:            https://github.com/jimenezrick/cook.hs
license-file:        LICENSE
license:             MIT
author:              Ricardo Catalinas Jiménez <r@untroubled.be>
copyright:           Copyright (c) 2016 Ricardo Catalinas Jiménez
category:            Utility
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.20

library
  ghc-options:         -Wall
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , OverloadedLists
                     , TemplateHaskell
                     , RecordWildCards
                     , DisambiguateRecordFields
                     , DeriveDataTypeable
                     , DeriveGeneric
                     , GeneralizedNewtypeDeriving
                     , StandaloneDeriving
                     , ScopedTypeVariables
                     , RankNTypes
                     , GADTs
  hs-source-dirs:      src
  exposed-modules:     Cook.Recipe
                     , Cook.Recipe.Config
                     , Cook.Recipe.FsTree
                     , Cook.Recipe.PkgManager
                     , Cook.Recipe.Template
                     , Cook.Recipe.Util
                     , Cook.Catalog.Arch.Pacman
                     , Cook.Catalog.Arch.Rootfs
                     , Cook.Catalog.Debian.Apt
                     , Cook.Catalog.Git
                     , Cook.Catalog.Go
                     , Cook.Catalog.Ipfs
                     , Cook.Catalog.Rkt
                     , Cook.Catalog.Ssh
                     , Cook.Catalog.Sudo
                     , Cook.Catalog.Systemd
                     , Cook.Catalog.Systemd.Container
                     , Cook.Catalog.User
                     , Cook.Facts
                     , Cook.Provider
                     , Cook.Provider.PkgManager
  build-depends:       base >=4.8 && <5
                     , bytestring
                     , containers
                     , unordered-containers
                     , data-default-class
                     , filepath
                     , filemanip
                     , text
                     , mtl
                     , mmorph
                     , unix
                     , network
                     , http-conduit
                     , directory
                     , typed-process
                     , yaml
                     , aeson
                     , aeson-pretty
                     , mustache
                     , file-embed
                     , lens
                     , lens-aeson
                     , split
                     , safe
                     , time
                     , safe-exceptions
                     , pretty-simple

executable cook-contain
  ghc-options:         -Wall
  default-language:    Haskell2010
  main-is:             tools/Contain.hs
  build-depends:       base
                     , cook

executable cook-playground
  ghc-options:         -Wall
  default-language:    Haskell2010
  main-is:             test/Playground.hs
  build-depends:       base
                     , cook
